# gpair

./: 2004contest1.oifits  CMakeLists.txt  README.md  exchange.h  getoifits.c  getoifits.h  gpair  gpair.c  gpair.h  gpu.c  gpu.h  gpu_kernels.c  kernel_bispec.cl  kernel_chi2.cl  kernel_grad_chi2bs.cl  kernel_grad_chi2v2.cl  kernel_normalize.cl  kernel_partial_sum.cl~  kernel_pow_spec.cl  kernel_reduce_float.cl  kernel_vis_update_fluxchange.cl  kernel_visi.cl  makefile
branches/cpu_dev/: 2004contest1.oifits  cpu.c  cpu.h  data_types.h  getoifits.c  getoifits.h  gpair.c  gpair.h  gpu.c  gpu.h  kernel_criterion_step.cl  kernel_dot.cl  kernel_entropy_gs.cl  kernel_entropy_gs_grad.cl
branches/gpu_dev/: cpu.c  getoifits.c  getoifits.h  gpair.c  gpair.h  gpu.c  gpu.h  kernel_bispec.cl  kernel_chi2.cl  kernel_chi2_bis.cl  kernel_chi2_pow.cl  kernel_criterion_grad.cl  kernel_descent_dir.cl  kernel_dot.cl  kernel_entropy_gs.cl  kernel_entropy_gs_grad.cl  kernel_grad_bis.cl  kernel_grad_chi2bs.cl  kernel_grad_pow.cl  kernel_normalize.cl  kernel_update_image.cl  kernel_visi.cl  read_fits.c
gpair1/branches/cpu_dev/: gpu.h  kernel_descent_dir.cl  (+2 more)
gpair1/trunk/: cpu.c  gpu.h  kernel_pow_spec.cl  kernel_update_image.cl  kernel_visi.cl
lib/oifitslib/: Makefile  demo  oicheck.py  oifilter.py  oifits-check  oifits-filter  oifits-merge  oifits.py  oimerge.py  test.txt
src/: CMakeLists.txt
trunk/: cpu.c  getoifits.c  getoifits.h  gpair.c  gpu.c  kernel_bispec.cl  kernel_criterion_step.cl  kernel_descent_dir.cl  kernel_grad_bis.cl  kernel_update_tempimage.cl  kernel_vis_update_fluxchange.cl  kernel_visi.cl
(+8 files in other folders)
